--- a/newvideos.tex
+++ b/newvideos.tex
@@ -1,3 +1,5 @@
+%=================================================
+%
 A. Let S = {0, 1, 2, 3}. 
 Define a relation R1 between the elements of S by
 “x is related to y if the product xy is even”.
@@ -10,6 +12,7 @@ C. Let S = {{1}, {1, 2}, {1, 2, 3}, {1, 2, 4}}.
 Define a relation R3 between
 the elements of S by “X is related to Y if X \subseteq Y ”.
 %-------------------------------------------------------------%
+\begin{frame}
 (i) Draw the relationship digraph.
 (ii) Determine whether the relation is either reflexive, symmetric, transitive
 or anti-symmetric. For the cases when one of these properties
@@ -46,6 +49,8 @@ The relation:
 is reflexive, symmetric and transitive;
 is not anti-symmetric e.g. 0 is related to 3, and 3 is related to 0,
 but 0 6= 3.
+\end{frame}
+%-------------------------------------------------------------%
 \begin{frame}
 (iii) R2 is an equivalence relation. The three equivalence classes are
 {0, 3}, {1}, and {2}. These form a partition of {0, 1, 2, 3}.
@@ -65,3 +70,4 @@ related to {1}.
 (iii) R3 is not an equivalence relation as it is not symmetric.
 (iv) R3 is a partial order but not an order (since {1, 2, 3} and {1, 2, 4}
 are not related to each other).
+\end{frame}
