--- a/HibColl2015Mock.tex
+++ b/HibColl2015Mock.tex
@@ -2,10 +2,10 @@
 
 \documentclass[12pt]{article} % use larger type; default would be 10pt
 
-
+\usepackage{enumerate}
 \usepackage{graphicx} 
 \usepackage{framed}
-
+\usepackage{multicol}
 
 
 \title{Hibernia College}
@@ -16,239 +16,125 @@
 
 \begin{center}
 \huge{Mathematics for Computing}\\
-\LARGE{Logic}
+\LARGE{Mock Exam 2015}
 \end{center}
 
+%---------------------------------------%
+\subsection*{Question 1}
+
+\begin{enumerate}[(i)]
+	\item Express the following hexadecimal number as a decimal number: $(A32.8)_16$.
+	[3]
+	\item Convert the following decimal number into base 2, showing all your working:
+	$(253)_{10}$. [2]
+		\item (2 Marks) Covert the decimal integer $(407)_{10}$ to binary notation.
+		
+		\item (2 Marks) Showing your working, express the following number 
+		\[ 1.024024024024\ldots\]
+		as a ration number in its simplest form.
+	\item Express the recurring decimal $0.4242424\ldots$
+	as a rational number in its simplest
+	form. 
+\end{enumerate}
+%--------------------------------------------------- %
+\subsection*{Question 2}
+%Question 2
+Let A and B and C be subsets of a universal set U.
 \begin{itemize}
-\item (2 Marks) Covert the decimal integer $(407)_{10}$ to binary notation.
-
-\item (2 Marks) Showing your working, express the following number 
-\[ 1.024024024024\ldots\]
-as a ration number in its simplest form.
-
+\item[(a)] (1 Mark) Draw a labelled Venn diagram depicting A,B,C in such a way that they divide
+U into 8 disjoint regions. [1]
+\item[(b)] (3 Marks) The subset $X \subseteq U$ is defined by the following membership table below. Shade the region X on your diagram. Describe the region you have shaded in
+set notation as simply as you can. 
 \end{itemize}
-%---------------------------%
-
-% Propositions
-% Logical Operations
-% Conditional Connectives
-% Logical Proofs
-% De Morgan's Law
-
-%-----------------------------------%
-
-% \frametitle{Propositions}
-
-\begin{itemize}
-\item Contra-positives
-\end{itemize}
-
-
-% \frametitle{Logical Notation}
-
-\begin{center}
-\begin{tabular}{|c|c|}
-Logical & Negation \\ \hline
-$p$	& $\neg p$ \\ \hline
-$T$	& $F$      \\ \hline
-$F$	& $T$      \\ \hline
-\end{tabular}
-\end{center}
-
-
-%-----------------------------------%
-
-(2.2.2) Cardinality 
-The number of distinct elements in a finite set is called its cardinality.
-
-
-(2.2.3) Power Set
-
-(2.3) Operations on Sets
-
-(2.3.1) Complement of a set
-(2.3.2) Binary Operations on Sets
--Union
--Intersection
--Set Difference
--Symmetric Difference 
-
-
-$ A \otimes B$
-
-{2, 3, 4, 6, 7, 8}
-
-Rules of Inclusion
-{1,2,3,4,5,6}
-{0,1,2,3,4,5,6,7,8,9}
-{-3,0,3,6,9,12}
-
-%================================= %
-$ A \in S$
-$ A \in S$
-$ A \cup B$
-$ A \cap B$
-%================================= %
-\subsection*{Example 1: }
-\begin{verbatim}
-If $U = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}$, \\
-
-$A = {2, 4, 6, 8, 10}$, \\
-$B = (1, 3, 6, 7, 8}$ \\
-$C = {3, 7}$, \\
-
-find $A \cap B$, $A \cup C$, $B \cap A^{c}$, $B \cap C^{c}$
-\end{verbatim}
-\begin{verbatim}
-Solution: 
-
-$U = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10}$\\
-$A = {2, 4, 6, 8, 10}$\\
-%$B = (1, 3, 6, 7, 8} $\\
-$C = {3, 7}$\\
-
-%A n B = {6, 8}
-%A \cap C = {2, 3, 4, 6, 7, 8, 10}
-%B n A^C = {1, 3, 7}
-%B n C^C = {1, 6, 8}
-\end{verbatim}
-\begin{verbatim}
-
-%> A
-%[1]  1  8  9 10
-%> B
-%[1] 4 7 9
-%> C
-%[1] 1 2 3 4 9
-%> D
-%[1] 2 5 6
-\end{verbatim}
-
-
-
-\section{Logic}
-\begin{itemize}
-\item The NOT operator $\neg$ (also known as the negation operator)
-\end{itemize}
-\subsection{Truth Tables}
-{
-\Large
-\begin{center}
-\begin{tabular}{|c|c||c|c||c|c|}
-\hline $p$ & $q$ & $p \wedge q$ & $p\vee q$ & $\neg p$  & $\neg (p \wedge q)$ \\ 
-\hline 0 & 0 & 0 & 0 & 1 & 1 \\ 
-\hline 0 & 1 & 0 & 1 & 1 & 1 \\ 
-\hline 1 & 0 & 0 & 1 & 0 & 1 \\ 
-\hline 1 & 1 & 1 & 1 & 0 & 0 \\ 
-\hline 
-\end{tabular} 
-\end{center}
-}
-%-------------------------%
-
-\subsection*{Prepositional Logic}
-
-
-
-
-
-
-
-\section{Section 3 Logic}
-\subsection{Logical Operations}
-\begin{itemize}
-\item $\neg p$ the negation of proposition $p$.
-\item $p \wedge q$ Both propositions p and q are simultaneously true (Logical State AND)
-\item $p \vee q $ One of the propositions is true, or both (Logical State : OR)
-\item $p \otimes q$ Only one of the propositions is true (Logical State : exclusive OR (i.e XOR)
-\end{itemize}
-\begin{center}
-\begin{tabular}{|c|c|c|c|c|}
-\hline
-p & q & $p \vee q$ & $q \wedge p$ & $p \otimes q$ \\
-\hline
-0 & 0 & 0 & 0 & 0 \\
-0 & 1 & 1 & 0 & 1\\
-1 & 0 & 1 & 0 & 1 \\
-1 & 1 & 1 & 1 & 0\\
-\hline
-\end{tabular}
-\end{center}
-%---------------------------------------------------------%
-\section{Conditional Connectives}
-Construct the truth table for the proposition $p \rightarrow q$.
-
 \begin{center}
 \begin{tabular}{|c|c|c|c|}
-\hline
-p & q & $p \rightarrow q$ & $q \rightarrow p$ \\
-\hline
-0 & 0 & 1& 1 \\
-0 & 1 & 1 & 0 \\
-1 & 0 & 0 & 1 \\
-1 & 1 & 1 & 1 \\
-\hline
-\end{tabular}
+	\hline
+	A & B & C & X \\ \hline
+	0 & 0 & 0 & 0 \\ \hline
+	0 & 0 & 1 & 1 \\ \hline
+	0 & 1 & 0 & 0 \\ \hline
+	0 & 1 & 1 & 0 \\ \hline
+	1 & 0 & 0 & 1 \\ \hline
+	1 & 0 & 1 & 1 \\ \hline
+	1 & 1 & 0 & 1 \\ \hline
+	1 & 1 & 1 & 0 \\ \hline
+\end{tabular} 
 \end{center}
 
-
-%-------------------------------------------------------------------------%
-\newpage
-
-\section{Section 4 Functions}
-
-\subsection{Invertible Functions}
-A function is invertible if it fulfils two criteria
 \begin{itemize}
-\item The function is \textbf{\textit{onto}},
-\item The function is \textbf{\textit{one-to-one}}.
-\end{itemize}
+\item[(c)] (3 Marks) The subset $Y \subseteq U$ is defined as $Y = A \cup (C − B)$. Construct the membership
+table for Y. 
+\item[(d)] For each of the following statements say whether it is true or false, justifying
+your answer, using the Venn diagram you drew earlier.
 
-State the conditions to be satisfied by a function
-$f : X \leftarrow Y$ for it to have an inverse function
-$f^{-1} : Y \leftarrow X$.
+\begin{enumerate}[(i)]
+\item $Y \subseteq X$
+\item $Y^{\prime} \subseteq X^{\prime}$
+\item $Y − X = A \cap B \cap C$.
+\end{enumerate}
+\end{itemize}
+%=====================================================================%
+\subsection*{Question 3}
+%2003
+(a) Let n be an element of the set $\{10, 11, 12, 13, 14, 15, 16, 17, 18, 19\}$,
+and p and q be the propositions:
+
+\[p : n \mbox{ is odd},   q : n < 15\].
+Draw up truth tables for the following statements and find the values of n for
+which they are true:
+(i) $ p \vee \neg q$ (ii) $\neg p \wedge q$
+(ii) Use truth tables to find a statement that is logically equivalent to ¬p ! q.
+[6]
+%--------------------- %
+% - 1.2 2010 
+\begin{enumerate}[(i)]
+\item Let p and q be propositions. Use Truth Tables to prove that
+
+\[ p \rightarrow q \equiv \neg q \rightarrow \neg\]
+\end{enumerate}
+%=====================================================================%
+\subsection*{Question 4}
+Let $S$ be the set of all 4 bit binary strings. The function $f : S \rightarrow Z$
+is defined by the rule:
+\[f(x) = \mbox{ the number of zeros in x} \] for each binary string $x \in S$.
+Find:
+\begin{itemize}
+	\item[(a)] (4 Marks) Answer the following questions
+\begin{itemize}
+\item[(i)] the number of elements in the domain
+\item[(ii)] f(1010)
+\item[(iii)] the set of pre-images of 1
+\item[(iv)] the range of f. 
+\end{itemize}
+\item[(b)] (2 Marks) Decide whether the function $f$, as defined above, has either the one to one or
+the onto property, justifying your answers. 
+\item[(c)] (2 Marks) State the condition to be satisfied by a function $f : X \rightarrow Y$ for it to have an
+inverse function $f^{−1} : Y \rightarrow X$.
+\item[(d)] (2 Marks) Define the inverse functions for each of the following:
+\end{itemize}
 %---------------------------------------------------------%
 
-$\lceil \frac{x^2+1}{4} \rceil$
-where $f : A \rightarrow \textbf{Z}$
-\begin{itemize}
-\item[(i)] Find $f(4)$ and the ancestors of 3.
-\item[(ii)] Find the range of $f$.
-\item[(iii)] Is f invertible? Justify your answer
-\end{itemize}
-
-Given $f : \textbf{R} \rightarrow \textbf{R}$ where f(x) =3x-1,define fully
-the inverse of the function f ,i.e.$f^{-1}$. 
-State the value of $f^{-1}(2)$
-%---------------------------------------------------------%
-\subsection{Precision Functions}
-
-\begin{itemize}
-\item Absolute Value Function $| x |$
-\item Ceiling Function $\lceil x \rceil$
-\item Floor Function  $\lfloor x \rfloor $
-\end{itemize}
-%\[ \lfloorx\rfloor\]
-
-\noindent \textbf{Question1.2}: State the range and domain of the following function
-\[ F(x) = \lfloor x-1 \rfloor \]
-
-
-
-%---------------------------------------------------------%
-
-\section{graph theory }
+\section*{Question 5}
 Given the following definitions for simple, connected graphs:
 \begin{itemize}
-\item $K_n$ is a graph on $n$ vertices where each pair of vertices is connected by an edge;
-\item $C_n$ is the graph with vertices $v_1, v_2, v_3, \dots, v_n$ and edges $\{v_1,v_2\}, \{v_2,v_3\}, \dots\{v_n, v_1\}$;
-\item $W_n$ is the graph obtained from $C_n$ by adding an extra vertex,$v_{n+1}$, and edges
-from this to each of the original vertices in $C_n$.
+	\item $K_n$ is a graph on $n$ vertices where each pair of vertices is connected by an edge;
+	\item $C_n$ is the graph with vertices $v_1, v_2, v_3, \dots, v_n$ and edges $\{v_1,v_2\}, \{v_2,v_3\}, \dots\{v_n, v_1\}$;
+	\item $W_n$ is the graph obtained from $C_n$ by adding an extra vertex,$v_{n+1}$, and edges
+	from this to each of the original vertices in $C_n$.
 \end{itemize}
 (a) Draw $K_4$, $C_4$, and $W_4$. 
+
+%----------------------------- %
+% 2006 
+a) (i) A simple, connected graph has 7 vertices, all having the same degree d.
+State the possible values of d and for each value also give the number of edges
+in the corresponding graph.
+(ii) Another simple, connected graph has 6 vertices, all having the same degree,
+n. Draw such a graph when n = 3 and state the other possible values of n.
+[4]
 %----------------------------------------------------------------%
 \newpage
-\section{Digraphs and Relatiosn}
+\section*{Question 6}
 % 2007 Q8
 Given a flock of chickens, between any two chickens one of them is
 dominant. A relation, R, is defined between chicken x and chicken y as xRy if x is
@@ -256,24 +142,143 @@ dominant over y. This gives what is known as a pecking order to the flock. Home
 Farm has 5 chickens: Amy, Beth, Carol, Daisy and Eve, with the following relations:
 
 \begin{itemize}
-\item Amy is dominant over Beth and Carol
-\item Beth is dominant over Eve and Carol
-\item Carol is dominant over Eve and Daisy
-\item Daisy is dominant over Eve, Amy and Beth
-\item Eve is dominant over Amy.
+	\item Amy is dominant over Beth and Carol
+	\item Beth is dominant over Eve and Carol
+	\item Carol is dominant over Eve and Daisy
+	\item Daisy is dominant over Eve, Amy and Beth
+	\item Eve is dominant over Amy.
 \end{itemize}
 
 \newpage
-\section{Counting}
-% 2007 Q8
+\section*{Question 6}
+% Digraphs and Relations
+% http://staff.scem.uws.edu.au/cgi-bin/cgiwrap/zhuhan/dmath/dm_readall.cgi?page=20
+
+Let $A=\{0,1,2\}$ and $R=\{ (0,0),(0,1),(0,2),(1,1), (1,2), (2,2)\}$
+and $S=\{(0,0),(1,1),(2,2)\}$ be 2 relations on A. Show that
+
+\begin{itemize}
+	\item[(i)] R is a partial order relation.
+	\item[(ii)] S is an equivalence relation.
+\end{itemize}
+%---------------------------------------------------------------------------%
+
+%2002 Question 7
+Let S be a set and let R be a relation on S
+Explain what it means to say thet $\mathcal{R}$ is
+
+\begin{itemize}
+	\item[(i)] reflexive
+	\item[(ii)] symmetrix
+	\item[(iii)] anti-symmetric
+	\item[(iv)] Transitive
+	%---------------------------------------------------------------------------%
+	
+	
+	
+\end{itemize}
+
+%---------------------------------------------------------------------------%
+% TREES
+\section*{Question 8}
+	Question 8A
+	\begin{enumerate}
+		\item How many edges are in the spanning tree $T$ ?
+		\item What is the sum of the degree sequence of $T$?
+		\item Write down all the possible degree sequences for the spanning tree $T$.
+	\end{enumerate}
+%---------------------------------------------------------------------------%
+	
+
+Suppose a database, comprised of 30,000 internal nodes, is structured as a Binary Search Tree.
+
+\begin{enumerate}
+	\item What is the Key of the Root node?
+	\item What are the keys of the nodes at level 1?
+	\item For the nodes at level1, how many subtrees are there?
+	\item State which nodes are in the substrees of the level 1 nodes?
+	\item How many nodes are the between the root (level 0) and level 7. ]
+	(Hint: use a summation theorem mentioned in session 7
+	\item What is the maximum number of searchs in this database?
+\end{enumerate}
+
+%============================================================================%
+
+\section*{ Question 9 }
 Given S is the set of all 5 digit binary strings, E is the set of a 5 digit
 binary strings beginning with a 1 and F is the set of all 5 digit binary strings ending
 with two zeroes.
 \begin{itemize}
-\item[(a)] Find the cardinality of S, E and F.
-\item[(b)] Draw a Venn diagram to show the relationship between the sets S, E and F.
-Show the relevant number of elements in each region of your diagram.
+	\item[(a)] Find the cardinality of S, E and F.
+	\item[(b)] Draw a Venn diagram to show the relationship between the sets S, E and F.
+	Show the relevant number of elements in each region of your diagram.
 \end{itemize}
+
+\begin{itemize}
+	\item A college teaches courses in the following subjects areas: mathematics, computing and statistics.
+	\item Students in the college may choose their courses from these three subject areas.
+	\item Students are not obliged to take courses from these three subject areas, and may instead take courses in other subject areas. 
+	\item  Let the subject areas be represented by the letters \textbf{M} for mathematics, \textbf{C} for computing and \textbf{S} for statistics. \item Draw a labelled Venn diagram showing the areas \textbf{M}, \textbf{C}, and \textbf{S} in such a way as to represent the students studying at the college. \item On your diagram show the number of students studying in each region of the Venn diagram.
+	%===================%
+	\begin{itemize}
+		\item Currently 600
+		students are enrolled in the college. 
+		\item 300 students are taking mathematics courses.
+		\item 120 student are taking statistics courses.
+		\item 380 students are taking computing courses. 
+		\item 40 students study courses from all three subject
+		areas. 
+		\item 200 mathematics students are taking computing courses as well. \item 60 computing students
+		are also takings statistics courses. \item  70 statistics students are also taking mathematics course.
+	\end{itemize}
+\end{itemize}
+
+%==============%
+\begin{itemize}
+	\item[(i)] How many students study none of these courses at all?
+	\item[(ii)] How many students are taking mathematics courses but not computing or statistics courses.
+	\item[(iii)] How many students study courses from precisely two of these subject
+	areas?
+	
+\end{itemize}
+
+%===========================================================%
+\section*{Question 10}
+
+(a) Given the following adjacency matrices A and B where
+A =
+
+1 0 1
+0 1 2
+1 2 0
+
+,B =
+
+1 2 0
+2 0 1
+0 1 1
+
+%MAKE NO
+
+%--------------------------------------------%
+
+\begin{itemize}
+	\item[(i)] Say whether or not the graphs they represent are isomorphic.
+	\item[(ii)] Calculate $A^2$ and $A^4$ and say what information each gives about the graph
+	corresponding to A. [6]
+\end{itemize}
+	%===========================================%
+	(b) 
+	\begin{itemize}
+		\item[(i)] Write down the augmented matrix for the following system of equations.
+		\[2x + y - z = 2\]
+		\[x - y + z = 4\]
+		\[x + 2y + 2z = 10\]
+		\item[(ii)] Use Gaussian elimination to solve the system. [4]
+	\end{itemize}
+%=========================================================================================== %
+
+
 %-------------------------------------------------------------------------%
 \newpage
 \end{document}
