--- a/Part3Logic/HibCollWorkSheet3.tex
+++ b/Part3Logic/HibCollWorkSheet3.tex
@@ -1,9 +1,18 @@
-Tautologies and Contradiction
+Propositioms, Tautologies and Contradiction
 
 Double Negative Law
-De Morgan's LAw
+
+De Morgan's Law
 
 Compound Statements
+
+%====================================================== %
 Truth Tables
 
+
+%====================================================== %
 Conditional Connectives
+
+The Biconditional
+
+%======================================================= %
