--- a/Part15MathsFunctions/Floor and Ceiling.tex
+++ b/Part15MathsFunctions/Floor and Ceiling.tex
@@ -3,8 +3,101 @@
 \usepackage{graphics}
 
 \begin{document}
+	
+	%=========================================================================================== %
+	\subsection*{Topic 1 : Special Functions}
+	\begin{frame}
+		\frametitle{Special Functions}
+		\begin{itemize}
+			% \item The factorial Operator
+			\item Absolute Value Function
+			\item The Sign Function
+			\item Floor and Ceiling Functions
+			\item Hyperbolic Functions
+		\end{itemize}	
+	\end{frame}
+	
+	
+	%---------------------------------------%
+	\begin{frame}
+		\frametitle{Absolute Value Function}
+		\Large
+		\textbf{Absolute Value Function}
+		\begin{itemize}
+			\item The absolute value (or modulus) $|x|$ of a real number x is the non-negative value of x without regard to its sign. 
+			
+			%	\item For example, $|x| = x$ for a positive x, $|x| = -x$ for a negative x (in which case −x is positive), and $|0| = 0$. 
+			%	\item For example, the absolute value of 4 is 4, and the absolute value of $-4$ is also 4. 
+			%\item The absolute value of a number may be thought of as its distance from zero.
+		\end{itemize}
+		\[|x| = \begin{cases} x, & \mbox{if }  x \ge 0  \\ -x,  & \mbox{if } x < 0. \end{cases} \]
+	\end{frame}
+	%---------------------------------------%
+	\begin{frame}
+		\frametitle{Topic 1 : Absolute Value Function}
+		\Large
+		\vspace{-1cm}
+		\begin{itemize}
+			
+			\item For a positive x, $|x| = x$ 
+			\item For a negative x (in which case −x is positive) $|x| = -x$ 
+			\item The absolute value of 0 is 0:  $|0| = 0$. 
+			\item For example, the absolute value of 4 is 4, and the absolute value of $-4$ is also 4. 
+			\item IMPORTANT:  The input to this function is any real number. The output of this function will always be a positive real numbers.
+			%\item The absolute value of a number may be thought of as its distance from zero.
+		\end{itemize}
+		
+		
+	\end{frame}
+	\begin{frame}
+		\frametitle{Topic 1 : Sign Function}
+		\Large
+		\textbf{Sign Function}
+		\begin{itemize}
+			\item The sign function $sng(x)$ of a real number x is a signed value of absolute value of 1, dependent on the sign of $x$. 
+			
+			%	\item For example, $|x| = x$ for a positive x, $|x| = -x$ for a negative x (in which case −x is positive), and $|0| = 0$. 
+			%	\item For example, the absolute value of 4 is 4, and the absolute value of $-4$ is also 4. 
+			%\item The absolute value of a number may be thought of as its distance from zero.
+			\item IMPORTANT:  The input to this function is any real number. The output of this function will always be either 1 or -1.
+		\end{itemize}
+		\[ sgn(x) = \begin{cases} 1, & \mbox{if }  x \ge 0  \\ -1,  & \mbox{if } x < 0. \end{cases} \]
+	\end{frame}
+	%---------------------------------------%
+	\begin{frame}
+		\frametitle{Topic 1 : Floor and Ceiling Functions}
+		\Large
+		\begin{itemize}
+			\item The floor and ceiling functions map a real number to the largest previous or the smallest following integer, respectively. \item More precisely, \[floor(x) = \lfloor x\rfloor \] is the largest integer not greater than x and \[ceiling(x) =  \lceil x \rceil \] is the smallest integer not less than x.
+		\end{itemize}
+		
+		
+	\end{frame}
+	
+	%---------------------------------------%
+	\begin{frame}
+		\frametitle{Topic 1 : Floor and Ceiling Functions}
+		\textbf{Examples}
+		{
+			\LARGE
+			\begin{eqnarray}
+			\lfloor 3.14 \rfloor =& 3 \\ \bigskip
+			\lceil -4.5 \rceil =& -5 \\ \bigskip
+			| -4 | =&  4
+			\end{eqnarray}
+		}
+		{\Large	
+			\textbf{Remark:}  Input to the floor and ceiling function can be any really number, but outputs are always integers.
+		}
+	\end{frame}
+	
+	
+\begin{frame}
+	\frametitle{Floor and Ceiling Functions}
+The floor and ceiling functions map a real number to the largest previous or the smallest following integer, respectively. More precisely, floor(x) = $\lfloor x\rfloor$ is the largest integer \textbf{not greater} than x and ceiling(x) =  $\lceil x \rceil$ is the smallest integer \textbf{not less} than x.
 
-
+\end{frame}
+%=================================================================================== %
 \begin{frame}
 \frametitle{Floor and Ceiling Functions}
 
@@ -148,5 +241,5 @@ Value x & Floor $\lfloor x\rfloor$ & Ceiling  $\lceil x\rceil$ & Fractional $ \{
 
 }
 \end{frame}
-
+%========================================================================= %
 \end{document}
