--- a/Cartesian video.tex
+++ b/Cartesian video.tex
@@ -64,4 +64,21 @@ Cartesian Product }
 \frametitle{The Cartesian Product}
 Exercises
 \end{frame}
+
+ Discrete Maths
+ 
+A binary relation on a set A is the collection of ordered pairs of elements of A. In other words, it is the subset of the cartesian product A2= AA
+
+Cartesian Product
+ 
+This is a direct product pf 2 sets
+ 
+XY = {(x,y)| xXandyY }
+ 
+4 suits of cards and 13 Ranks, therefore 52 element cartesian prodcut.
+ 
+N.B         AB BA
+              A=A =
+ 
+Cartesian product is not associative
 \end{document}
