--- a/MASTER05-GraphTheory/HibColl Session 05 Graph Theory.tex
+++ b/MASTER05-GraphTheory/HibColl Session 05 Graph Theory.tex
@@ -62,6 +62,69 @@
 \end{itemize}
 
 
+%-----------------------------------------------------%
+\section*{Session 05:Graphs}
+\begin{itemize}
+	\item[5A.1] What is a Graph?
+	\item[5A.2] Paths Cycles and Connectivity
+	\item[5A.3] Isomorphisms of a graph
+	\item[5A.4] Adjacency Matrices and Adjacency Lists
+\end{itemize}
+
+
+\subsection*{Isomorphism}
+\begin{itemize}
+	\item They have a different number of connected components
+	\item They have a different number of vertices
+	\item They have different degrees sequences
+	\item They have a different number of paths of any given length
+	\item They have a different number of cycles of any length.
+\end{itemize}
+
+\subsection*{Adjacency Lists}
+\begin{itemize}
+	\item[u]: $\{v\}$
+	\item[v]: $\{w,x\}$
+	\item[w]: $\{v,x\}$
+	\item[z]: $\{v,w\}$
+\end{itemize}
+
+
+
+
+\begin{itemize}
+	\item Spanning Subgraphs of G.
+	
+	\item a vertex is said to be an \textbf{emph{ isolated vertex}} if it has a degree of zero.
+	\item a vertex is said to be an \textbf{emph{ end-vertex}} if it has a degree of one.
+	\item a vertex is said to be an \textbf{emph{ even vertex}} if it has a degree of an even number.
+	\item a vertex is said to be an \textbf{emph{ odd vertex}} if it has a degree of an odd number.
+	
+	
+	\item A graph is said to be \textbf{emph{k-regular}} if the degree of each vertex is $k$. 
+	\item Every Graph has an even number of odd vertices.
+	\item A cubic graph is a graph where every vertex has degree three.
+\end{itemize}
+
+
+%---------------------------- %
+
+\section*{Session 05 Graph Theory}
+\begin{itemize}
+	\item Eulerian Path
+	\item Isomorphism
+	\item Adjacency matrices
+\end{itemize}
+Adjacency Matrices
+\[ \left( \begin{matrix}
+o & 1 & 0 & 1 & 1 \\ 
+1 & 0 & 1 & 0 & 1 \\ 
+1 & 1 & 0 & 1 & 1 \\ 
+0 & 1 & 1 & 1 & 1 \\ 
+1 & 1 & 0 & 1 & 0
+\end{matrix} \right) \]
+
+
 %---------------------------- %
 
 \section*{Session 05 Graph Theory}
